[package]
name = "sensor_common"
version = "0.1.0"
authors = ["Michael Watzko <michael@watzko.de>"]
description = "Library to communicate with embedded sensors (over ethernet)"
keywords = ["ethernet"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kellerkindt/sensor_common"


[dependencies]
