[package]
name = "sensor_common"
version = "0.1.0"
authors = ["Michael Watzko <michael@watzko.de>"]
description = "Library to communicate with embedded sensors (over ethernet)"
keywords = ["ethernet"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kellerkindt/sensor_common"
edition = "2018"

[features]
default = []
std = ["random", "thiserror", "derive_builder", "tokio", "onewire"]

[dependencies]
num_enum = { version = "0.5.1", default-features = false }


random = { version = "0.12.2", optional = true }
thiserror = { version = "1.0.26", optional = true }
derive_builder = { version = "0.10.2", optional = true }
tokio = { version = "1.15.0", features = ["rt", "net", "time"], optional = true }
# onewire = { path = "../onewire", optional = true }
onewire = { git = "https://gitlab.watzko.de/smarthome/onewire.git", optional = true }